Added logic to get the current month Added month closing logic
